<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data class="com.thompalmer.mocktwitterdemo.presentation.login.LoginViewBinding">

        <variable
            name="viewModel"
            type="com.thompalmer.mocktwitterdemo.presentation.login.LoginViewModel"/>

        <import type="android.view.View"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.thompalmer.mocktwitterdemo.presentation.login.LoginActivity">

        <!-- Login progress -->
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="@{viewModel.loggingIn ? View.VISIBLE : View.GONE}"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.loggingIn ? View.GONE : View.VISIBLE}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:onTextChanged="@{viewModel::onEmailChanged}"
                        android:text="@{viewModel.email}"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:onTextChanged="@{viewModel::onPasswordChanged}"
                        android:text="@{viewModel.password}"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_sign_in"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="@{viewModel::onLoginClicked}"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
