<resources>
    <string name="app_name">Mock Twitter Demo</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_tweet">TweetActivity</string>
    <string name="logout">Logout</string>
    <string name="new_tweet_hint">What\'s happening?</string>
    <string name="tweet">Tweet</string>
    <string name="title_activity_create_tweet">Tweet</string>
</resources>
